added dark mode toggle and animation

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -61,3 +61,27 @@ body {
 .timeline-title {
     @apply mb-3 text-lg font-semibold tracking-tight text-gray-600 dark:text-gray-300
 }
+
+.v-leave {
+    @apply transition-transform duration-200 transform rotate-180
+}
+
+.v-leave-active {
+    @apply transition-transform duration-200 transform rotate-180
+}
+
+.v-leave-to {
+    @apply transition-transform duration-200 transform rotate-180
+}
+
+.v-enter {
+    @apply transition-transform duration-200 transform -rotate-90
+}
+
+.v-enter-active {
+    @apply transition-transform duration-200 transform -rotate-45
+}
+
+.v-enter-to {
+    @apply transition-transform duration-200 transform rotate-0
+}
