--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body {
-    @apply h-full bg-gray-300 dark:bg-gray-900
+    @apply bg-gray-300 dark:bg-gray-900
 }
 
 .contact-button {
