added linter, prettier and reformatted code.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,14 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    @apply bg-gray-300 dark:bg-gray-900
+html,
+body {
+    @apply bg-gray-300 dark:bg-gray-900;
 }
 
 .contact-button {
     @apply bg-blue-500 hover:bg-blue-600 hover:shadow-md uppercase text-white font-bold shadow
     text-xs px-4 py-2 rounded outline-none mb-1 ease-linear transition-all duration-150
-    focus:outline-none sm:mr-2
+    focus:outline-none sm:mr-2;
 }
 
 /*
@@ -17,49 +18,49 @@ html, body {
 */
 
 .timeline {
-    @apply antialiased mt-4 relative text-left grid grid-cols-1 md:grid-cols-2
+    @apply antialiased mt-4 relative text-left grid grid-cols-1 md:grid-cols-2;
 }
 
 .timeline:before {
     @apply absolute bg-blue-gray w-1.25 m-auto -inset-0 dark:bg-gray-800;
-    content: "";
+    content: '';
 }
 
 .timeline-grid {
-    @apply relative flex items-start flex-row mt-8
+    @apply relative flex items-start flex-row mt-8;
 }
 
 .timeline-grid-right {
-    @apply md:mt-20 flex-row-reverse
+    @apply md:mt-20 flex-row-reverse;
 }
 
 .timeline-card {
-    @apply bg-white w-10/12 z-10 shadow-md rounded-lg p-4 dark:bg-gray-800
+    @apply bg-white w-10/12 z-10 shadow-md rounded-lg p-4 dark:bg-gray-800;
 }
 
 .timeline-date {
-    @apply py-1 text-xs font-bold leading-none text-gray-300 dark:text-gray-600
+    @apply py-1 text-xs font-bold leading-none text-gray-300 dark:text-gray-600;
 }
 
 .timeline-title {
-    @apply mb-3 text-lg font-semibold tracking-tight text-gray-600 dark:text-gray-300
+    @apply mb-3 text-lg font-semibold tracking-tight text-gray-600 dark:text-gray-300;
 }
 
 .timeline-description {
-    @apply leading-normal text-sm text-gray-600 dark:text-gray-400
+    @apply leading-normal text-sm text-gray-600 dark:text-gray-400;
 }
 
 .timeline-cancelled {
-    @apply border-l-4 border-red-400
+    @apply border-l-4 border-red-400;
 }
 
 .timeline-post {
-    @apply relative
+    @apply relative;
 }
 
 .timeline-before {
     @apply bg-blue-gray absolute w-full right-0 z-0 h-1 top-15 hidden md:block dark:bg-gray-800;
-    content: "";
+    content: '';
 }
 
 .timeline-post-marker {
@@ -67,31 +68,31 @@ html, body {
 }
 
 .timeline-badges {
-    @apply flex flex-wrap
+    @apply flex flex-wrap;
 }
 
 .timeline-badge {
-    @apply flex justify-center items-center mr-2 mt-2 font-medium py-1 px-2 rounded-full border
+    @apply flex justify-center items-center mr-2 mt-2 font-medium py-1 px-2 rounded-full border;
 }
 
 .timeline-badge-text {
-    @apply text-xs font-normal leading-none max-w-full flex-initial
+    @apply text-xs font-normal leading-none max-w-full flex-initial;
 }
 
 .timeline-modal {
-    @apply fixed z-20 top-0 left-0 w-screen h-screen flex items-center justify-center bg-blue-500 bg-opacity-50
+    @apply fixed z-20 top-0 left-0 w-screen h-screen flex items-center justify-center bg-blue-500 bg-opacity-50;
 }
 
 .timeline-modal-card {
-    @apply relative bg-white w-10/12 md:w-1/2 h-1/2 p-4 flex flex-shrink rounded dark:bg-gray-800
+    @apply relative bg-white w-10/12 md:w-1/2 h-1/2 p-4 flex flex-shrink rounded dark:bg-gray-800;
 }
 
 .timeline-modal-image {
-    @apply w-full flex justify-center items-center
+    @apply w-full flex justify-center items-center;
 }
 
 .timeline-modal-close {
-    @apply absolute top-0 right-0 p-2 focus:outline-none
+    @apply absolute top-0 right-0 p-2 focus:outline-none;
 }
 
 /*
@@ -99,29 +100,29 @@ html, body {
 */
 
 .v-leave {
-    @apply transition-transform duration-200 transform rotate-180
+    @apply transition-transform duration-200 transform rotate-180;
 }
 
 .v-leave-active {
-    @apply transition-transform duration-200 transform rotate-180
+    @apply transition-transform duration-200 transform rotate-180;
 }
 
 .v-leave-to {
-    @apply transition-transform duration-200 transform rotate-180
+    @apply transition-transform duration-200 transform rotate-180;
 }
 
 .v-enter {
-    @apply transition-transform duration-200 transform -rotate-90
+    @apply transition-transform duration-200 transform -rotate-90;
 }
 
 .v-enter-active {
-    @apply transition-transform duration-200 transform -rotate-45
+    @apply transition-transform duration-200 transform -rotate-45;
 }
 
 .v-enter-to {
-    @apply transition-transform duration-200 transform rotate-0
+    @apply transition-transform duration-200 transform rotate-0;
 }
 
 input:checked ~ .dot {
-    @apply transform translate-x-full bg-green-500
+    @apply transform translate-x-full bg-green-500;
 }
